--- a/.github/workflows/prc.yaml
+++ b/.github/workflows/prc.yaml
@@ -20,7 +20,7 @@ jobs:
       run: go test -v ./...
   golangci:
     name: lint
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v4
         with:
@@ -34,7 +34,7 @@ jobs:
           skip-cache: true # To prevent occasional failure of this action.
   typos:
     name: typos
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: typos 
@@ -43,7 +43,7 @@ jobs:
         config: ./.github/typosconfig.toml
   go-apidiff:
     if: github.event_name == 'pull_request'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
       with:
