--- a/.github/workflows/prc.yaml
+++ b/.github/workflows/prc.yaml
@@ -17,7 +17,14 @@ jobs:
     - name: Build
       run: go build -v ./...
     - name: Test
-      run: go test -v ./...
+      run: go test -v -coverprofile=coverage.out ./...
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        files: coverage.out
+        flags: unittests
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   golangci:
     name: lint
     runs-on: ubuntu-latest
@@ -39,8 +46,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: typos 
       uses: crate-ci/typos@master
-      with:
-        config: ./.github/typosconfig.toml
   go-apidiff:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
